alignment issue fixes

--- a/styles.css
+++ b/styles.css
@@ -232,7 +232,7 @@ body {
 }
 
 .btn-icon {
-    margin: 6px 6px;
+    margin: 5px 6px;
 }
 
 @media only screen and (max-width: 991px) {
